firestore-path-helper/crates/firestore-path-helper-proc-macro/tests/ui/fail_args_duplicate.stderr
error: duplicate document id argument: 'user_id'
 --> tests/ui/fail_args_duplicate.rs:5:9
  |
5 |         user_id = String, // duplicate argument
  |         ^^^^^^^
